--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-you must have an account heroku
+from flask import Flask
+app = Flask(__name__)
+
+
+app.route('/')
+def index():
+return 'Hello, World'
